--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+*.zip
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
@@ -50,6 +51,7 @@ web_modules/
 
 # Optional npm cache directory
 .npm
+
 
 # Optional eslint cache
 .eslintcache
