--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "stripe": "^16.2.0"
   }
 }
